--- a/behavioral-pattern/pom.xml
+++ b/behavioral-pattern/pom.xml
@@ -10,6 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>behavioral-pattern</artifactId>
+    <packaging>pom</packaging>
+    <modules>
+        <module>interpreter-pattern</module>
+    </modules>
 
 
 </project>
