--- a/structural-pattern/facade-pattern/pom.xml
+++ b/structural-pattern/facade-pattern/pom.xml
@@ -3,18 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>design-pattern</artifactId>
+        <artifactId>structural-pattern</artifactId>
         <groupId>com.victor.pattern</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>structural-pattern</artifactId>
+    <artifactId>facade-pattern</artifactId>
 
-    <packaging>pom</packaging>
 
-    <modules>
-        <module>proxy-pattern</module>
-        <module>facade-pattern</module>
-    </modules>
 </project>
