--- a/creational-pattern/singleton-pattern/pom.xml
+++ b/creational-pattern/singleton-pattern/pom.xml
@@ -3,16 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>design-pattern</artifactId>
+        <artifactId>creational-pattern</artifactId>
         <groupId>com.victor.pattern</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>creational-pattern</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>singleton-pattern</module>
-    </modules>
+    <artifactId>singleton-pattern</artifactId>
+
 
 </project>
